# cppbackend

./: .gitignore
.github/workflows/: main.yml
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  hotdog.h  ingredients.h  main.cpp  result.h
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_converter.cpp  json_converter.h  json_loader.cpp  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/map_json/solution/: CMakeLists.txt
sprint1/problems/map_json/solution/src/: http_server.h  json_converter.cpp  json_converter.h  json_loader.cpp  request_handler.h
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/command_line/solution/src/: json_converter.cpp  json_converter.h  json_loader.cpp  main.cpp
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/game_state/solution/src/: json_converter.cpp  json_converter.h  json_loader.cpp  json_loader.h  main.cpp
sprint2/problems/join_game/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/join_game/solution/src/: json_converter.cpp  json_converter.h  json_loader.cpp  json_loader.h  main.cpp
sprint2/problems/join_game/solution/src/app/: game.cpp  game.h  game_session.h  game_session_handler.h  player.h  player_tokens.h
sprint2/problems/join_game/solution/src/http_server/: http_server.h
sprint2/problems/join_game/solution/src/model/: model.h
sprint2/problems/join_game/solution/src/request_handler/: api_handler.cpp  api_handler.h  content_type.h  file_handler.cpp  file_handler.h  logging_request_handler.h  request_handler.cpp  request_handler.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt
sprint2/problems/move_players/solution/src/: json_converter.cpp  json_loader.cpp  main.cpp
sprint2/problems/server_logging/solution/: CMakeLists.txt
sprint2/problems/server_logging/solution/src/: file_handler.h  http_server.h  json_converter.cpp  json_converter.h  logger.h  logging_request_handler.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/static_content/solution/src/: ._request_handler.cpp  file_handler.h  http_server.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/src/: json_converter.cpp  json_converter.h  json_loader.cpp  json_loader.h
sprint3/problems/ammo/solution/: ammo.txt  load.yaml
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/find_return/solution/src/: json_converter.cpp  json_loader.cpp
sprint3/problems/find_return/solution/tests/: get_map_tests.cpp  (+1 more)
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/htmldecode/solution/: CMakeLists.txt
sprint3/problems/scores/solution/: conanfile.txt
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: json_loader.cpp  json_loader.h
sprint3/problems/static_lib/solution/src/app/: application.h
sprint3/problems/static_lib/solution/src/app/player/: player.cpp  players.cpp  players.h
sprint3/problems/static_lib/solution/src/request_handler/api_handler/parsers/: join_game_request.h
sprint3/problems/static_lib/solution/tests/: get_game_state_tests.cpp
sprint3/problems/tv/solution/: CMakeLists.txt
sprint3/problems/urldecode/solution/: CMakeLists.txt
sprint3/problems/urlencode/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/src/: json_converter.cpp  json_converter.h  json_loader.cpp  main.cpp
sprint4/problems/leave_game/solution/src/app/: application.cpp  application.h  collision_detector.cpp  collision_detector.h
sprint4/problems/leave_game/solution/src/app/game/: game.cpp  game.h  game_session.h  game_session_handler.h
sprint4/problems/leave_game/solution/src/app/player/: player.cpp  player.h  players.cpp  players.h
sprint4/problems/leave_game/solution/src/app/use_cases/: game_tick_use_case.h  get_game_records_use_case.h  get_game_state_use_case.h  list_player_use_case.h
sprint4/problems/leave_game/solution/src/app/use_cases/tick_use_case/: check_afk_provider.h
sprint4/problems/leave_game/solution/src/loots/: loot_generator.h
sprint4/problems/leave_game/solution/src/model/: dog.h  item.h  model.h  tagged.h
sprint4/problems/leave_game/solution/src/postgres/: connection_pool.h  repository.h  repository_impl.cpp  repository_impl.h  unit_of_work.h  unit_of_work_impl.cpp  unit_of_work_impl.h
sprint4/problems/leave_game/solution/src/request_handler/api_handler/: api_handler.cpp  api_handler.h
sprint4/problems/leave_game/solution/src/request_handler/api_handler/parsers/: get_game_records_request.h  player_action_request.h
sprint4/problems/leave_game/solution/src/request_handler/utils/: content_type.h
sprint4/problems/leave_game/solution/src/serialization/: application_serialization.h
sprint4/problems/leave_game/solution/src/utils/: command_line_parser.h
sprint4/problems/leave_game/solution/tests/: get_map_tests.cpp  loot_generator_tests.cpp  state-serialization-tests.cpp  tick_tests.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile  state_file
(+227 files in other folders)
